<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/page_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/menu"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#b3e5fc"
            android:text="@string/create_profile"
            android:textAllCaps="false"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_inc_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#b3e5fc"
            android:text="@string/inc_exp"
            android:textAllCaps="false"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_recur_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#b3e5fc"
            android:text="@string/recur_exp"
            android:textAllCaps="false"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/view_recur_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#b3e5fc"
            android:text="@string/view_recur"
            android:textAllCaps="false"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_generate_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#b3e5fc"
            android:text="@string/generate_report"
            android:textAllCaps="false"
            android:textColor="#607D8B"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>