<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/report_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ReportFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarIncome"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="Report">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/base_layout"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:inputType="text"
            android:textColor="#AB47BC"
            android:minHeight="48dp"
            android:padding="10dp"
            android:hint="Item name"/>

        <EditText
            android:id="@+id/amount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:inputType="numberDecimal"
            android:textColor="#AB47BC"
            android:minHeight="48dp"
            android:padding="10dp"
            android:hint="Enter Amount"/>

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="Enter User"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#AB47BC"/>

        <RadioGroup
            android:id="@+id/group_radio"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tran_type"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rad_income"
                android:text="@string/income"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rad_expense"
                android:text="@string/expense"
                android:textSize="20sp"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:layout_constraintTop_toBottomOf="@id/group_radio"
            android:text="@string/sav_rec"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>